8224028: loop initial declarations introduced by JDK-8184770

Reviewed-by: dfuchs, amenkov, sspitsyn